# retail-behavior

./: .env.example  .gitignore  AGENTS.md  README.md  analyze_docx.py  convert_reports.py  convert_to_docx.py  docker-compose.yml  gen_reports_from_original.py  index.html  package-lock.json  temp_output.txt  upload2.py  upload_two_files.py  upload_yz.py
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_foundation.py  002_behavior_events.py  003_metrics.py  004_profiles_segments.py  005_alerts_recommendations.py  006_reports.py
backend/scripts/: create_mysql_database.sql  download_ai_model.py  init_mysql.py
backend/src/: __init__.py
backend/src/analytics/: behavior_summary_service.py  funnel_service.py  metric_definitions.py  product_heat_service.py  validation.py
backend/src/api/: app.py  compat.py  filters.py
backend/src/domain/: common.py  enums.py
backend/src/jobs/: alert_recommendation_job.py  metric_refresh_job.py
backend/src/models/: alerts_recommendations.py  behavior_event.py  database.py  foundation.py  metrics.py  profiles.py  reports.py  security.py
backend/src/reports/: export_service.py  report_service.py
backend/src/retail_behavior_analytics.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/security/: audit.py  audit_query_service.py  auth.py  masking.py
backend/src/services/: ai_preference_service.py  alert_rule_service.py  alert_workflow_service.py  behavior_event_repository.py  behavior_ingestion_service.py  (+6 more)
backend/tests/: conftest.py
src/: App.tsx  (+1 more)
(+135 files in other folders)
