[project]
name = "retail-behavior-analytics"
version = "0.1.0"
description = "Smart retail behavior analytics backend"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "pydantic>=2.7",
  "pymysql>=1.1",
  "python-dotenv>=1.0",
  "sentence-transformers>=3.0,<4.0",
  "sqlalchemy>=2.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pyyaml>=6.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
strict = false
